Meter updates by script for ra-s nontimeseries (#2084)
For non timeseries indices we want to meter all documents updates, as otherwise we would not account for this document in the RA-S value (updates are delete followed by index operations).
This PR is a follow up from elastic/elasticsearch#108910 where the API for creation of DocumentSizeObserver and setting the normalizedBytesParsed is more abstracted.
So far we were setting the number of bytes observed when parsing a document on a IndexEngine#normalisedBytesParsed for all new documents and updates by doc. For updates by script we were setting 'a flag' 0 . This was to prevent udpates by script to be reported by RA-I reporter.

however now we want to also parse the document updated by script so that we can keep on reporting the same RA-S.
With this commit, in UpdateHelper where the execution of UpdateRequest (with a script) is happening, we should set the field originatingFromUpdateByScript on the IndexRequest

This new field is needed because the resulting IndexRequest (resulting from UpdateRequest in UpdateHelper) has to be skipped when reporting in RAIngestReporter but to use it in RAStorageReporter